--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main {
     width: 100vw;
 }
 
-.currency-container {
+.converter-container {
     background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(199, 199, 199, 1) 75%);
     border: 1px solid #fff;
     border-radius: 16px;
@@ -39,7 +39,7 @@ main {
     padding: 10px 20px;
 }
 
-.currency-selection {
+.converter-form {
     display: flex;
     flex-direction: column;
     height: 86vh;
@@ -85,7 +85,7 @@ button:hover {
     background-color: #9ca2bb;
 }
 
-.currency-result {
+.conversion-result {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -114,7 +114,7 @@ p {
 }
 
 @media screen and (max-width: 1200px) {
-    .currency-container {
+    .converter-container {
         height: 555px;
         width: 300px;
     }
