--- a/style.css
+++ b/style.css
@@ -4,118 +4,124 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Roboto", serif;
-}
-
-body {
-    background-image: url(img/background.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
+    font-family: 'Roboto', sans-serif;
+    outline: none;
 }
 
 main {
+    background: linear-gradient(180deg, #EDE7F6 24%, #C5CAE9 100%);
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 100%;
     height: 100vh;
-    width: 100vw;
+    padding: 1em;
 }
 
-.converter-container {
-    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(199, 199, 199, 1) 75%);
-    border: 1px solid #fff;
-    border-radius: 16px;
-    box-shadow: 1px 1px 5px #000;
+section {
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    gap: 10px;
+    max-width: 350px;
+    width: 100%;
+    padding: 1em;
+}
+
+.options-box {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     gap: 5px;
-    height: 86vh;
-    width: 25vw;
-    padding: 10px 20px;
-}
-
-.converter-form {
-    display: flex;
-    flex-direction: column;
-    height: 86vh;
-    min-width: 22vw;
-    gap: 5px;
+    width: 100%;
 }
 
 label {
-    color: #091e30;
+    font-size: 1em;
+    font-weight: 500;
+}
+
+select,
+input,
+button {
+    background-color: #9575CD;
+    border: none;
+    border-radius: 6px;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 1.2em;
     font-weight: 600;
+    width: 100%;
+    height: 35px;
 }
 
 select,
 input {
-    appearance: none;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 1.2rem;
-    font-weight: 700;
-    height: 40px;
-    width: 100%;
-    padding-left: 20px;
-    outline: none;
+    padding-left: 10px;
+}
+
+input::placeholder {
+    color: rgba(255, 255, 255, 0.7);
 }
 
 button {
-    background-color: #acb3cf;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0 1px 4px #000000c6;
-    color: #fff;
-    cursor: pointer;
-    font-size: 1.2rem;
-    font-weight: 700;
-    height: 40px;
-    width: 100%;
     margin: 10px 0;
-    transition: .5s ease;
+    transition: 0.3s ease;
 }
 
 button:hover {
-    background-color: #9ca2bb;
+    background-color: #7E57C2;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.conversion-result {
+optgroup {
+    color: #000000;
+}
+
+.conversion-box {
+    border: 3px solid #9575CD;
+    border-radius: 12px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1em 1em 2em;
+    position: relative;
 }
 
-img {
-    display: block;
-    margin: 5px auto;
+.currency-image {
+    width: 40px;
 }
 
-.flag {
-    border-radius: 100%;
-    box-shadow: 0 1px 3px #000;
-    width: 52px;
+.currency-name {
+    font-weight: 400;
 }
 
-figcaption {
-    text-align: center;
+.input-value,
+.output-value {
+    font-size: 1em;
+    font-weight: 600;
 }
 
-p {
-    font-size: 1.1rem;
-    font-weight: 700;
-    text-align: center;
+.conversion-arrow {
+    margin: 10px 0;
 }
 
-@media screen and (max-width: 1200px) {
-    .converter-container {
-        height: 555px;
-        width: 300px;
-    }
+.rates-box {
+    position: absolute;
+    bottom: 0;
+    right: 10px;
+}
+
+.rates {
+    font-size: 0.7em;
+    font-weight: 500;
+    font-style: italic;
 }
